# decomposition-magician

./: ARCHITECTURE.md  DESIGN.md  README.md  ROADMAP.md  design.txt  investigation.md  pyproject.toml
.github/workflows/: test.yml
decomp_magician/: __main__.py  classify.py  cli.py  diff.py  dispatch.py  export.py  format.py  graph.py  opset.py  resolve.py  reverse.py  stats.py  tree.py
docs/: architecture.md  design.md
tests/: conftest.py  test_backward.py  test_classify.py  test_cli.py  test_diff.py  test_dispatch.py  test_graph.py  test_opset.py  test_resolve.py  test_reverse.py  test_stats.py  test_tree.py
