[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decomposition-magician"
version = "0.4.0"
description = "Inspect PyTorch operator decomposition trees"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sean McGovern"}]
keywords = ["pytorch", "decomposition", "compiler", "torch.compile", "aten"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
decomp-magician = "decomp_magician.__main__:main"

[project.urls]
Repository = "https://github.com/stmcgovern/decomposition-magician"
Issues = "https://github.com/stmcgovern/decomposition-magician/issues"
